--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <html>
 <head>
-<style>
-.one {
-    color: purple;
-}
-.two {
-    background-color: red;
-}
-</style>
+<title>hello</title>
 </head>
 <body>
-<p>hello world</p>
-<p>hello world</p>
-<p>hello world</p>
-<p class='one two'>hello world</p>
-<p>hello world</p>
-<p>hello world</p>
-<p>hello world</p>
+<h1>내 생에 첫 홈페이지</h1>
+<a href="contact/">contact</a>
+<a href="product/">product</a>
 </body>
 </html>
